# study_agent

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  introduction.md  main.py  test-embedding.py
apps/api/: Dockerfile  README.md  aiosqlite.py  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: router.py  routes_health.py  (+18 more)
apps/api/migrations/: env.py
apps/api/scripts/: __init__.py  prepare_local.py  seed_dev.py  smoke_local.py
apps/api/tests/: model_type_helpers.py  test_agent_runtime_config.py  test_agent_runtime_metadata.py  test_agent_runtime_routes.py  test_auth_context.py  test_chapter_annotations_routes.py  test_chapter_mentor.py  test_chapter_mentor_providers.py  test_chapter_mentor_state_models.py  test_chapter_mentor_state_routes.py  test_chapter_mentor_state_service.py  test_chapter_study_routes.py  test_chapter_study_service.py  test_config_profiles.py  test_cors.py  test_dashboard_recommendations.py  test_dashboard_routes.py  test_dashboard_service.py  test_filesystem_storage.py  test_health.py  test_ingestion_routes.py  test_learning_route_generator.py  test_learning_route_routes.py  test_learning_route_service.py  test_learning_signal_routes.py  test_learning_signals.py  test_local_settings.py  test_local_settings_routes.py  test_main_agent_graph.py  test_models.py  test_planner_actions.py  test_planner_actions_models.py  test_planner_actions_routes.py  test_planner_actions_service.py  test_quiz_mastery.py  test_quiz_models.py  test_quiz_routes.py  test_quiz_service.py  test_rag_chunking.py  test_rag_embeddings.py  (+29 more)
(+272 files in other folders)
