[project]
name = "study-agent-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "boto3>=1.34.0",
  "fastapi>=0.115.0",
  "greenlet>=3.0.0",
  "httpx>=0.27.0",
  "langgraph>=1.2.2",
  "langgraph-checkpoint-postgres>=3.1.0",
  "pgvector>=0.4.2",
  "psycopg[binary,pool]>=3.3.4",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
